force-app/main/default/objects/SEL_IntegrationValue__mdt/SEL_IntegrationValue__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata is used to store headers.</description>
    <label>SEL Integration Value</label>
    <pluralLabel>SEL Integration Values</pluralLabel>
</CustomObject>