force-app/main/default/objects/SEL_IntegrationValue__mdt/fields/SEL_IntegrationSettingId__c.field-meta.xml
<CustomField>
    <fullName>SEL_IntegrationSettingId__c</fullName>
    <label>Integration Setting</label>
    <referenceTo>SEL_IntegrationSetting__mdt</referenceTo>
    <relationshipLabel>Http Request Integration Values</relationshipLabel>
    <relationshipName>SEL_IntegrationValues</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>