force-app/main/default/objects/SEL_IntegrationValue__mdt/fields/SEL_Key__c.field-meta.xml
<CustomField>
    <fullName>SEL_Key__c</fullName>
    <label>Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>