force-app/main/default/objects/SEL_IntegrationValue__mdt/fields/SEL_SourceValueType__c.field-meta.xml
<CustomField>
    <fullName>SEL_SourceValueType__c</fullName>
    <label>Source Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Static</fullName>
                <default>true</default>
                <label>Static</label>
            </value>
            <value>
                <fullName>Dynamic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>