force-app/main/default/objects/SEL_IntegrationValue__mdt/fields/SEL_Type__c.field-meta.xml
<CustomField>
    <fullName>SEL_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Endpoint</fullName>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Dynamic</fullName>
                <isActive>false</isActive>
                <label>Dynamic</label>
            </value>
            <value>
                <fullName>Static</fullName>
                <isActive>false</isActive>
                <label>Static</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>