force-app/main/default/objects/SEL_IntegrationValue__mdt/fields/SEL_Value__c.field-meta.xml
<CustomField>
    <fullName>SEL_Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>